--- a/package.json
+++ b/package.json
@@ -18,14 +18,17 @@
     "@reduxjs/toolkit": "^2.9.0",
     "axios": "^1.12.2",
     "formik": "^2.4.6",
+    "js-cookie": "^3.0.5",
     "next": "15.5.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-hot-toast": "^2.6.0",
     "react-redux": "^9.2.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
